feat(swagger): added security api key swagger & get user profile api docs
